kubernetes/_base/miscellaneous/your-spotify/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: your-spotify
spec:
  redirectScheme:
    scheme: https
    permanent: true
