kubernetes/_base/miscellaneous/your-spotify/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: your-spotify
  labels:
    goldilocks.fairwinds.com/enabled: "true"
