kubernetes/_base/miscellaneous/your-spotify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: your-spotify
  namespace: your-spotify
spec:
  selector:
    app: your-spotify
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
